Removed instructions for better parity with mobile

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <body>
     <h3 id="button" onclick="fetchMemes()">Memes</h3>
     <div class="title">
-    <h1><a class="fword">Reddit</a><a class="cword">Memes</a> | Click Button To Start!</h1>
+    <h1><a class="fword">Reddit</a><a class="cword">Memes</a></h1>
     </div>
     <script src="script.js"></script>
     <script src="color.js"></script>
